--- a/style/master.css
+++ b/style/master.css
@@ -38,24 +38,27 @@
         >li {
             width: 100%;
             border: 1px solid rgb(163, 161, 161);
-            margin-block: 10px;
 
             * {
                 width: 100%;
             }
 
             >h2 {
-                height: 80px;
+                height: 65px;
                 background-color: rgb(205, 202, 202);
-                padding-left: 20px;
+                padding: 5px;
                 display: flex;
                 flex-wrap: wrap;
-                align-items: center;
+
+                >.icon-toggle{
+                    margin-left: ;
+                }
             }
 
             >p {
                 overflow: hidden;
                 transition: 1s;
+                align-items: center;
             }
         }
     }
